[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-harvest-ie-producers"
version = "0.2.2"
description = "Ingestion module for real-time data sources (e.g., NOAA SWPC) into Kafka"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Machine Learning Maverick", email = "github@machinelearningmaverick.com" }
]
keywords = ["kafka", "producer", "streaming", "swpc", "space-weather"]
dependencies = [
  "stellar-harvest-ie-models",
  "kafka-python>=2.0.2",
  "requests>=2.28.1",
  "pydantic>=1.10.2",
  "typer[all]>=0.7.0"
]

[project.scripts]
sh-producer = "stellar_harvest_ie_producers.stellar.swpc.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellar_harvest_ie_producers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -q --disable-warnings --strict-markers"
log_cli = true
log_cli_level = "DEBUG"

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-mock>=3.10.0"
]